# rabbit-hole-api

./: .env  Cargo.toml  file_server.db
migrations/2025-05-02-034537_init/: down.sql  up.sql
src/: auth.rs  groups.rs  http_responses.rs  main.rs  models.rs  routes.rs  schema.rs
