[package]
name = "upload_files"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-multipart = "0.7.2"
actix-rt = "2"
diesel = { version = "2", features = ["sqlite", "r2d2", "chrono"] }
dotenvy = "0.15"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
jsonwebtoken = "9"
bcrypt = "0.17.0"
chrono = "0.4"
actix-files = "0.6.6"
actix-cors = "0.7.1"
env_logger = "0.11"
log = "0.4"